--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"type": "git",
 		"url": "https://github.com/93Alliance/vscode-cpphelper"
 	},
-	"version": "0.0.3",
+	"version": "0.0.4",
 	"engines": {
 		"vscode": "^1.62.0"
 	},
@@ -71,6 +71,10 @@
 			{
 				"command": "cpphelper.switchLeftPane",
 				"title": "Switch Header/Source To Left Pane"
+			},
+			{
+				"command": "cpphelper.createFuncImpl",
+				"title": "Create function implement"
 			}
 		],
 		"configuration": {
