--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"type": "git",
 		"url": "https://github.com/93Alliance/vscode-cpphelper"
 	},
-	"version": "0.0.9",
+	"version": "0.1.0",
 	"engines": {
 		"vscode": "^1.62.0"
 	},
@@ -93,8 +93,8 @@
 				"cpphelper.region": {
 					"type": "object",
 					"default": {
-						"start": "// #region name",
-						"end": "// #endregion"
+						"start": "/* #region name */",
+						"end": "/* #endregion */"
 					}
 				},
 				"cpphelper.cmakeBuildOutputDoclinkEnable": {
