--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"type": "git",
 		"url": "https://github.com/93Alliance/vscode-cpphelper"
 	},
-	"version": "0.2.4",
+	"version": "0.2.5",
 	"engines": {
 		"vscode": "^1.62.0"
 	},
@@ -217,6 +217,11 @@
 					"type": "array",
 					"default": [],
 					"description": "Added builtin type"
+				},
+				"cpphelper.createSpecialMemberWithoutImpl": {
+					"type": "boolean",
+					"default": false,
+					"description": "Whether the implementation is automatically generated when a special function is created"
 				}
 			}
 		},
